--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "chance": "^1.0.4",
     "d3": "^4.2.6",
+    "d3-dsv": "^1.0.10",
     "d3-tip": "^0.7.1",
     "lodash": "^4.16.2",
     "sanitize-html": "^1.13.0",
