--- a/default.template
+++ b/default.template
@@ -2,6 +2,8 @@
 server {
   listen 80;
   location / {
+    add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+    expires off;
     root /opt/build-your-own-radar;
     index index.html;
   }
